# diflo

./: README.org
src/: CMakeLists.txt  Makefile  diflo.cpp  multip.cpp  sdnopt.cpp  sphand.cpp
src/analysis/: CMakeLists.txt  Makefile  dist.cpp  fft.cpp  grid.cpp  handedness.cpp  helicity.cpp  momentum.cpp
src/include/: data.hpp  dist.hpp  event.hpp  fft.hpp  grid.hpp  handedness.hpp  helicity.hpp  momentum.hpp  particle.hpp  statistics.hpp
src/input/: CMakeLists.txt  Makefile  data.cpp  event.cpp  particle.cpp  root_data.cpp
src/test/: CMakeLists.txt  Makefile  rp_test.cpp  stats_test.cpp
